name:                advent-of-code
version:             0.1.0.0
synopsis:            Short description of your package
homepage:            https://github.com/tdawes/advent-of-code-2017#readme
license:             BSD3
license-file:        LICENSE
author:              Tom Dawes
maintainer:          tomdawes91@gmail.com
copyright:           Tom Dawes
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/tdawes/advent-of-code-2017
